# ionmesh

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: checks.yml  deny.yml
src/: dbscan.rs  extraction.rs  kdtree.rs  lib.rs  main.rs  md_dbscan.rs  mod_types.rs  ms.rs  ms_denoise.rs  quad.rs  scoring.rs  space_generics.rs  tdf.rs  trace_combination.rs  tracing.rs  utils.rs  visualization.rs
src/aggregation/: aggregators.rs  chromatograms.rs  converters.rs  dbscan.rs  mod.rs  ms_denoise.rs  pseudospectra.rs  trace_combination.rs  tracing.rs
src/aggregation/dbscan/: dbscan.rs  denseframe_dbscan.rs  mod.rs  runner.rs  utils.rs
src/aggregation/queriable_collections/: mod.rs  queriable_indexed_points.rs  queriable_traces.rs
src/ms/: frames.rs  mod.rs  sorting.rs  tdf.rs
src/ms/frames/: dense_frame_window.rs  frame_slice.rs  frame_slice_rt_window.rs  frames.rs  mod.rs
src/space/: kdtree.rs  mod.rs  quad.rs  space_generics.rs
tests/: test_window_parsing.rs
tests/data/: .gitignore  README.md  build.bash
tests/data/diapasef_tdf/: README.md  dia_frame_msms_info.tsv  dia_frame_msms_window_groups.tsv  dia_frame_msms_windows.tsv  frames.tsv
tests/data/synchropasef_tdf/: README.md  dia_frame_msms_info.tsv  dia_frame_msms_window_groups.tsv  dia_frame_msms_windows.tsv  frames.tsv  global_metadata.tsv
tune/: .gitignore  requirements.txt  tune.py
utils/: plot_quad.py  requirements.txt
