[package]
name = "ionmesh"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timsrust = "0.2.2"
rusqlite = { version = "0.29.0", features = ["bundled"] }

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rayon = "1.8.0"
indicatif = {version = "*", features = ["rayon"]}
log = "0.4"
pretty_env_logger = "0.4"
num = "0.4.1"
num-traits = "0.2.18"
clap = {version = "4.4.17", features = ["derive"]}
csv = "1.3.0"

rand = "0.8.5"

# Sage
sage-core = { git = "https://github.com/lazear/sage.git", rev = "9e870429889b341c4773df32b65e553283301a93" }
toml = "0.8.8"

[features]
par_dataprep = []

# [profile.release]
# debug = true
