[package]
name = "ionmesh"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timsrust = "= 0.2.2"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rayon = "1.8.0"
indicatif = {version = "*", features = ["rayon"]}
log = "0.4"
pretty_env_logger = "0.4"
num = "0.4.1"
num-traits = "0.2.18"
clap = {version = "4.4.17", features = ["derive"]}
csv = "1.3.0"
rand = "0.8.5"

sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "sqlite"]}
libsqlite3-sys = "^0.26.0"
tokio = {version="1.38.0", features = ["rt", "rt-multi-thread"]}

# Sage
sage-core = { git = "https://github.com/lazear/sage.git", rev = "9e870429889b341c4773df32b65e553283301a93" }
toml = "0.8.8"

[features]
par_dataprep = []
less_parallel = [] # Mostly for profiling reasons ... looking at flamegraphs is hard with rayon...

[profile.release]
lto = "thin"
panic = "abort"
# codegen-units = 1
# debug = true
